fixed branch conflict. Gaps working

--- a/client/source/style.scss
+++ b/client/source/style.scss
@@ -39,7 +39,7 @@ h4 {
   .home {
     // LOGO
     img {
-      width: 30px;
+      width: 15px;
     }
   }
 
@@ -58,7 +58,7 @@ h4 {
   }
 
   .home {
-    width: 40px;
+    width: 60px;
     margin: 0 10px;
     text-align: center;
     // border: 1px red solid;
